<resources>

    <string name="app_name">4Teeth Profissional</string>

    //Strings para mensagem
    <string name="default_notification_channel_id">4teeth emergency</string>
    <string name="fcm_default_title_message">4Teeth</string>
    <string name="unable_to_login">Não foi possível fazer o login, verifique os dados e tente novamente.</string>
    <string name="logged_in">Login Efetuado!</string>

    //Strings gerais
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="toothImageDescription">Dente 3D</string>
    <string name="profile">Perfil</string>

    //Strings tela Inicial
    <string name="strAppName">4Teeth</string>
    <string name="strAppMotto">Dental Care</string>
    <string name="btnSignIn">Entrar</string>
    <string name="btnSignUp"><u>Não possui cadastro?</u></string>
    <string name="strLogin">Login</string>
    <string name="strEmail">E-mail:</string>
    <string name="strPassword">Senha:</string>

    //Strings tela cadastro Inicial
    <string name="title_sign_up">Criar conta</string>
    <string name="strName">Nome:</string>
    <string name="strPhone">Telefone:</string>
    <string name="strMiniCurriculum">Mini-currículo:</string>
    <string name="strPasswordConfirm">Confirme sua Senha:</string>
    <string name="signUpNameHint">Nome Completo</string>
    <string name="signUpEmailHint">example@email.com</string>
    <string name="signUpPasswordHint">senha</string>
    <string name="signUpNumberHint">+55 (11) 98765–4321</string>
    <string name="signUpMiniCurriculum">Experiência de 2 anos…</string>
    <string name="btnContinue">Prosseguir</string>
    <string name="btnConfirm">Finalizar</string>
    <string name="inputsEmpty">Preencha todos os campos obrigatórios</string>
    <string name="mismatchPasswords">As senhas não coincidem</string>
    <string name="invalidEmail">O email não é válido</string>
    <string name="passwordLength">A senha deve possuir ao menos 6 dígitos</string>

    //Strings tela cadastro Endereços
    <string name="title_addresses">Endereços de atendimento</string>
    <string name="strAddress1">Endereço:</string>
    <string name="strAddAddress">Adicionar endereço</string>
    <string name="strAddress2">Endereço 2 (Opcional):</string>
    <string name="strAddress3">Endereço 3 (Opcional):</string>
    <string name="strZipCode">Cep</string>
    <string name="strAddressNumber">Número da residência ou s/n</string>
    <string name="strComplement">Complemento (opcional)</string>
    <string name="strRua">Rua</string>
    <string name="strNeighborhood">Bairro</string>
    <string name="strCity">Cidade</string>
    <string name="strState">Estado</string>
    <string-array name="states_array">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    //Strings tela Status
    <string name="title_fragment_status">Meu Status</string>
    <string name="strAvailability">Diponível para emergências</string>

    //Strings tela Menu
    <string name="title_activity_initial_menu">Menu</string>

    //Strings tela Avaliação
    <string name="title_fragment_avaliacao">Solicitar Avaliação</string>
    <string name="strAvaliacao">Deseja solicitar uma avaliação do responsável?</string>

    //Strings tela Reputação
    <string name="title_fragment_reputacao">Minha Reputação</string>
    <string name="strCasos">Casos atendidos:</string>
    <string name="strClassificacaoGeral">Classificação Geral:</string>
    <string name="strComentarios">Comentários Recebidos:</string>
    <string name="strExComentario1">"Ótimo profissional, resiliente e muito querido com todos seus pacientes."</string>
    <string name="strExComentario2">"Embora seja um bom profissional, demorou muito a atender meu filho."</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="clientImageDescription">.</string>
    clientImageDescription

    <string name="strRating4.1">4.1</string>
    <string name="strRating5.0">5.0</string>
    <string name="strRating3.2">3.2</string>
    <string name="strClient1">Cliente 1</string>
    <string name="strClient2">Cliente 2</string>

    //Strings tela Menu
    <string name="title_fragment_menu">Menu</string>
    <string name="docImageDescription">.</string>
    <string name="strMinhaReputacao">Minha Reputação</string>
    <string name="strMeuStatus">MeuStatus</string>
    <string name="strAvailableEmergencies">Emergências Disponíveis</string>
    <string name="strAttendedEmergencies">Emergências Atendidas</string>
    <string name="strServiceAddresses">Endereços de Atendimento</string>

    //Strings tela Emergências
    <string name="title_fragment_emergency">Emergências</string>
    <string name="dentist_waiting">Aguardando dentista</string>
    <string name="dentist_accepted">Você aceitou</string>
    <string name="service_waiting">Aguardando atendimento</string>
    <string name="service_finished">Atendimento finalizado</string>
    <string name="rescuer_waiting">Aguardando socorrista</string>
    <string name="rescuer_accepted">Socorrista aceitou</string>
    <string name="btnViewImg">Visualizar Imagem</string>
    <string name="title_activity_logged">LoggedActivity</string>
    <string name="btnDecline">Recusar</string>
    <string name="btnAccept">Atender</string>
    <string name="btnFinish">Finalizar</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    //Strings tela Usuário
    <string name="title_user_fragment">Meus Dados</string>
    <string name="user_picture">Imagem do dentista</string>

    /Camera
    <string name="cancel_picture">Cancelar</string>
    <string name="take_picture">Tirar foto</string>
    <string name="accept_picture">Salvar</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>