<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/elevation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_screen"
    android:orientation="vertical"
    android:theme="@style/Theme.4TeethProfissional"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/strAppName"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/strAppMotto"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/tooth_3d" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_rounded_login_screen"
        android:orientation="vertical"
        android:theme="@style/Theme.4TeethProfissional">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/strLogin"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/labelsMainScreen_LinearLayout"
            android:text="@string/strEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EtEmailLogin"
            style="@style/inputMainScreen"
            android:hint="@string/signUpEmailHint"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/labelsMainScreen_LinearLayout"
            android:text="@string/strPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EtPasswordLogin"
            style="@style/inputMainScreen"
            android:hint="@string/signUpPasswordHint"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnCadastrar"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            style="@style/btnDefault"
            android:text="@string/btnEntrar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>