<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.menu.UserFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/toothImageDescription"
        app:srcCompat="@drawable/tooth_3d" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserName"
        style="@style/btnDefault"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/branco_gelo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strEmail"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserMail"
        style="@style/btnDefault"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/branco_gelo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strPhone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserPhone"
        style="@style/btnDefault"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/branco_gelo"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_marginTop="20dp"
        style="@style/btnDefault"
        android:text="Deslogar"/>

</androidx.appcompat.widget.LinearLayoutCompat>