<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.menu.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/ivCapturedPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotationY="180"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_picture"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTakePhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAcceptPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_picture"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
