<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_screen"
    android:orientation="vertical"
    android:theme="@style/Theme.4TeethProfissional"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/screenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/title_fragment_menu"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imgClient2"
        android:layout_width="65dp"
        android:layout_height="90dp"
        android:layout_gravity="end|top"
        android:layout_marginHorizontal="20dp"
        android:clickable="true"
        android:contentDescription="@string/docImageDescription"
        app:srcCompat="@drawable/ic_doc_red"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:background="@drawable/container_menu"
        android:orientation="horizontal"
        android:theme="@style/Theme.4TeethProfissional"
        android:padding="8dp"
        android:elevation="50dp"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/imgTooth1"
            android:layout_width="90dp"
            android:contentDescription="@string/clientImageDescription"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tooth_3d_45"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/strMinhaReputacao"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:background="@drawable/container_menu"
        android:orientation="horizontal"
        android:theme="@style/Theme.4TeethProfissional"
        android:padding="8dp"
        android:elevation="50dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/imgTooth2"
            android:layout_width="90dp"
            android:contentDescription="@string/clientImageDescription"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tooth_3d_45"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/strMeuStatus"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:background="@drawable/container_menu"
        android:orientation="horizontal"
        android:theme="@style/Theme.4TeethProfissional"
        android:padding="8dp"
        android:elevation="50dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/imgTooth3"
            android:layout_width="90dp"
            android:contentDescription="@string/clientImageDescription"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tooth_3d_45"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/strEmergenciasDisponiveis"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:background="@drawable/container_menu"
        android:orientation="horizontal"
        android:theme="@style/Theme.4TeethProfissional"
        android:padding="8dp"
        android:elevation="50dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/imgTooth4"
            android:layout_width="90dp"
            android:contentDescription="@string/clientImageDescription"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tooth_3d_45"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/strSolicitarAvaliação"
            android:textColor="@color/black"
            android:textSize="25sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>